# TEOChat

./: README.md  TRAIN_AND_VALIDATE.md  pyproject.toml  requirements.txt
scripts/: eval_teochat.sh  finetune_teochat.sh  merge_lora_weights.py  train_teochat.sh  upload_weights.py
videollava/: utils.py
videollava/eval/: aid_fmow_ucmerced_utils.py  ben_utils.py  cdvqa_utils.py  classification.py  classification_segmentation.py  datasets_into_geochat_format.py  detection.py  eval.py  eval_classification.py  eval_geochat_referring.py  eval_referring.py  geochat_bench.py  geochat_eval_fmow.py  geochat_geovlm_infer.py  geochat_referring_2.py  geochat_s2looking_utils.py  geochat_utils.py  infer_eval.py  infer_utils.py  inference.py  qfabric_utils.py  s2looking_utils.py  xbd_utils.py
videollava/model/: builder.py
videollava/model/multimodal_encoder/: builder.py
videollava/serve/: teochat_demo.py
videollava/train/: train.py
