[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teochat"
version = "1.0.0"
description = "TEOChat: A Large Vision-Language Assistant for Temporal Earth Observation Data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.1", "torchvision==0.17.1", "datasets==3.0.2",
    "transformers==4.31.0", "tokenizers>=0.12.1,<0.14", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.26.1", "peft==0.7.1", "bitsandbytes==0.41.0",
    "pydantic==2.8.2", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "requests", "httpx==0.27.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.12",
    "tensorboardX==2.6.2.2", "gradio==3.39.0", "gradio_client==1.1.1",
    "deepspeed==0.14.0", "ninja", "wandb", "opencv-python==4.7.0.72",
    "decord==0.6.0", "shapely==2.0.1"
]

[project.urls]
"Homepage" = "https://github.com/ermongroup/TEOChat"
"Bug Tracker" = "https://github.com/ermongroup/TEOChat/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "scripts*", "static*"]

[tool.wheel]
exclude = ["assets*", "scripts*", "static*"]
